# berniwal.github.io

./: .gitignore  404.html  CLAUDE.md  CNAME  README.md  SEO_SUBMISSION.md  asset-manifest.json  index.html  package-lock.json  package.json  sitemap.xml
experiments/self-improvement-arena/: .gitignore  README.md  analyze_puct_ablation.py  app_engine.py  export_blog_data.py  export_replay.py  pyproject.toml  requirements-layer1.txt  run_ablation.py  run_entropy.py  run_layer0.py  run_layer1.py  run_layer1_torch.py  run_nguyen_collapse.py  run_overnight.sh  streamlit_app.py
experiments/self-improvement-arena/configs/: harder_postfix.yaml  harder_postfix_nrmse.yaml  layer0.yaml  layer1.yaml  layer1_lora.yaml  layer1_lora_1h.yaml  nguyen.yaml  nguyen_nrmse.yaml  scaling.yaml  scaling_nrmse.yaml
experiments/self-improvement-arena/docs/: REASONING_EXPERIMENT.md
experiments/self-improvement-arena/layer1/: README.md  __init__.py  constfit.py  llm_evolution.py  lora_proposer.py  proposer_llm_stub.py  puct_sampler.py  puct_state.py  torch_lora_proposer.py
experiments/self-improvement-arena/results/: table.md
experiments/self-improvement-arena/results/layer0_mse/: replay.json  results.md
experiments/self-improvement-arena/results/layer0_nrmse/: replay.json  results.md
experiments/self-improvement-arena/results/layer1-torch-reasoning/noreason/: seed0.json  (+2 more)
experiments/self-improvement-arena/results/nguyen_nrmse/: results.md
experiments/self-improvement-arena/results_layer1/: table.md
experiments/self-improvement-arena/results_layer1_lora/: table.md
experiments/self-improvement-arena/results_layer1_lora_kl/: table.md
experiments/self-improvement-arena/results_scaling/: scaling_table.md  table.md
experiments/self-improvement-arena/runpod/: inspect_cot.py  inspect_cot.sh  run_dsr.sh  run_layer1_torch.sh
experiments/self-improvement-arena/src/sia/: __init__.py  expression.py  metrics.py  objectives.py  plotting.py  policy.py  runner.py  task.py  verifier.py
experiments/self-improvement-arena/tests/: test_app_engine.py  test_core.py  test_layer1.py  test_objectives.py  test_puct_sampler.py
(+261 files in other folders)
